Fixed vertical line bug on IE11 where line was showing up in middle of parent div.  (Thanks: https://stackoverflow.com/questions/3148415/how-to-make-a-vertical-line-in-html)

--- a/EnglishLearners/dev/assets/css/main.css
+++ b/EnglishLearners/dev/assets/css/main.css
@@ -5795,6 +5795,7 @@ div.legendButton {
     margin: 0;
     position: relative;
     left: -1px;
+    display: inline-block; 
 }
 
 div.disclaimer .legendExplain {
